--- a/Lyyneheym/Modeling/DevDocs/2_1_5_IL.md
+++ b/Lyyneheym/Modeling/DevDocs/2_1_5_IL.md
@@ -43,18 +43,18 @@ Yuri引擎会在启动游戏的时候解析所有的Yuri-IL中间代码文件，
 | LabelDictionary | Dictionay | 标签字典 |
 
 ### 将IL恢复为内存对象
-Yuri引擎负责解析Yuri-IL中间代码的模块是**Yuri.PlatformCore.VM.ILConvertor**，它按照如下逻辑进行解析工作：
+Yuri引擎负责解析Yuri-IL中间代码的模块是`Yuri.PlatformCore.VM.ILConvertor`，它按照如下逻辑进行解析工作：
 
 - 检索脚本目录下所有的中间代码文件，以“.SIL”后缀名结束的文件，将读入的文件做行分割
 - 顺序遍历行分割的结果，将分割的行对象按场景按照行在文件里的顺序组织好
 - 对每个场景下的行，抽取其在全局脚本中的唯一编号来恢复代码逻辑关系。其过程是以这样的顺序做**广度优先遍历**：
-  - 恢复该中间代码行为一个动作序列SceneAction对象
+  - 恢复该中间代码行为一个动作序列`SceneAction`对象
   - 标记该行是**脏**的，即以后不再考虑这个行，也不从这个行继续搜索
   - 如果该对象是一个**标签**指令，那么记录它的位置
   - 处理该对象的**Next指针**，即下一指令指针
   - 处理该对象的**真值路径TrueRouting**，即该动作节点的子路径，在IF结构中，它是条件为真时的语句块；在FOR结构中，它是循环体语句块。
   - 处理该对象的**假值路径FalseRouting**，即该动作节点的条件子句不满足时的子路径。 在IF结构中，它是条件为假时的语句块。
-- 将处理完毕的动作序列包装成函数对象SceneFunction和场景对象Scene
+- 将处理完毕的动作序列包装成函数对象`SceneFunction`和场景对象`Scene`
 
 注意资源必须被放置在正确的目录下才能被引擎正确地引用。
 
